projects/compiler/test/parser/map_error_no_comma.out
Error at %FILE_NAME%:1:10
Unexpected token 'identifier', expected one of ',', '}':
  |  { abc: 1 def: 2 }
              ^